# CodeJudge-Student

./: .gitattributes  .gitignore  README.md  analysis_options.yaml  pubspec.yaml
lib/: error_codes.txt  main.dart
lib/l10n/: app_de.arb  app_en.arb  app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart
lib/layouts/: DesktopLayout.dart  MobileLayout.dart  TabletLayout.dart  desktop_layout.dart  mobile_layout.dart  tablet_layout.dart
lib/pages/: settings_page.dart  trainings_mode.dart
lib/ui_elements/: my_alert_dialog.dart  my_edit_text.dart  my_infomation_right_sheet.dart  my_list_items.dart  my_navigation_bar.dart  my_search_bar.dart
lib/utils/: api_connector.dart  exercise_datamodell.dart  global_variables.dart  judger_bindings.dart  judger_loader.dart  my_exercises.dart  my_provider.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
native/: CMakeLists.txt  judger.c  judger.h
